@@ -111,7 +111,7 @@ class UIFactory(object):
             current_format_name,
             basedir)
 
-            
+
 class CLIUIFactory(UIFactory):
     """Common behaviour for command line UI factories."""
 
@@ -131,7 +131,7 @@ class CLIUIFactory(UIFactory):
                 return False
 
     def get_non_echoed_password(self, prompt):
-        return getpass.getpass(prompt)
+        return getpass.getpass(prompt.encode(sys.stdout.encoding, 'replace'))
 
     def get_password(self, prompt='', **kwargs):
         """Prompt the user for a password.
@@ -144,7 +144,7 @@ class CLIUIFactory(UIFactory):
                  canceled the request.
         """
         prompt += ': '
-        prompt = (prompt % kwargs).encode(sys.stdout.encoding, 'replace')
+        prompt = (prompt % kwargs)
         # There's currently no way to say 'i decline to enter a password'
         # as opposed to 'my password is empty' -- does it matter?
         return self.get_non_echoed_password(prompt)
